Add Railway.app configuration

--- a/config/database.yml
+++ b/config/database.yml
@@ -83,3 +83,4 @@ production:
   url: <%= ENV['DATABASE_URL'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 25 } %>
   sslmode: require
+  timeout: 5000
