--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "nixpacks"
-buildCommand = "bundle install && bundle exec rake assets:precompile"
+buildCommand = "chmod +x bin/rails && bundle install && bundle exec rake assets:precompile"
 
 [deploy]
 startCommand = "bundle exec puma -C config/puma.rb"
